# compliance-agent

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: github-actions-setup.md
deploy/terraform/: README.md  backend.hcl  main.tf  outputs.tf  variables.tf  versions.tf
gcp_live_compliance/: __init__.py  ai_detector.py  auth.py  cli.py  models.py  report.py  scanner.py  vertex_explainer.py
gcp_live_compliance/collectors/: hierarchy.py  iam.py  network.py  storage.py
gcp_live_compliance/notifiers/: slack.py
gcp_live_compliance/rules/: hierarchy_rules.py  iam_rules.py  network_rules.py  storage_rules.py
scripts/: live_smoke_test.py
tests/: README.md  test_ai_detector.py  test_hierarchy_rules.py  test_iam_rules.py  test_network_rules.py  test_slack_notifier.py  test_storage_rules.py  test_vertex_explainer.py
