[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-live-compliance-agent"
version = "0.1.0"
description = "Scans a live GCP project's IAM policy and firewall rules, with an optional real Vertex AI (Gemini) explanation layer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "google-auth>=2.30",
    "google-cloud-resource-manager>=1.12",
    "google-cloud-compute>=1.19",
    "google-cloud-storage>=2.18",
]

[project.optional-dependencies]
ai = ["google-genai>=1.5"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
gcp-live-compliance = "gcp_live_compliance.cli:main"

[tool.setuptools.packages.find]
include = ["gcp_live_compliance*"]
